repairing bg on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,9 @@
 @import './reset.scss';
 
+html {
+  min-height: 100%;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -14,6 +18,8 @@ body {
   background-repeat: no-repeat;
 
   font-size: 12px;
+  min-height: 100%;
+  
 }
 
 a {
